rigid.h

struct futhark_context ;
/*
 * Arrays
*/

struct futhark_f32_1d ;
struct futhark_f32_2d ;
struct futhark_f32_3d ;
struct futhark_i32_1d ;
struct futhark_i8_1d ;
/*
 * Opaque values
*/

struct futhark_opaque_arr_association_1d ;
struct futhark_opaque_arr_dXdt_1d ;
struct futhark_opaque_arr_forceTorque_1d ;
struct futhark_opaque_arr_rigid_1d ;
struct futhark_opaque_box ;
int futhark_entry_sgd(struct futhark_context *ctx, struct futhark_f32_2d **out0,
                      struct futhark_f32_3d **out1,
                      struct futhark_f32_2d **out2, const float in0, const
                      float in1, const int32_t in2, const int32_t in3, const
                      struct futhark_f32_2d *in4, const
                      struct futhark_f32_3d *in5, const
                      struct futhark_f32_2d *in6, const
                      struct futhark_f32_2d *in7, const
                      struct futhark_f32_2d *in8, const int32_t in9);
int futhark_entry_gradientDescent(struct futhark_context *ctx, float *out0,
                                  struct futhark_f32_2d **out1,
                                  struct futhark_f32_3d **out2,
                                  struct futhark_f32_2d **out3, const float in0,
                                  const struct futhark_f32_2d *in1, const
                                  struct futhark_f32_3d *in2, const
                                  struct futhark_f32_2d *in3, const
                                  struct futhark_f32_2d *in4, const
                                  struct futhark_f32_2d *in5, const
                                  int32_t in6);
int futhark_entry_dXdtsAndUpdatedSystem(struct futhark_context *ctx,
                                        struct futhark_opaque_arr_dXdt_1d **out0,
                                        struct futhark_opaque_arr_rigid_1d **out1,
                                        const float in0, const
                                        struct futhark_opaque_box *in1, const
                                        struct futhark_opaque_arr_rigid_1d *in2,
                                        const
                                        struct futhark_opaque_arr_forceTorque_1d *in3);
int futhark_entry_dXdts(struct futhark_context *ctx,
                        struct futhark_opaque_arr_dXdt_1d **out0, const
                        struct futhark_opaque_arr_rigid_1d *in0, const
                        struct futhark_opaque_arr_forceTorque_1d *in1);
int futhark_entry_rk4weightedUpdate(struct futhark_context *ctx,
                                    struct futhark_opaque_arr_rigid_1d **out0,
                                    const float in0, const
                                    struct futhark_opaque_box *in1, const
                                    struct futhark_opaque_arr_rigid_1d *in2,
                                    const
                                    struct futhark_opaque_arr_dXdt_1d *in3,
                                    const
                                    struct futhark_opaque_arr_dXdt_1d *in4,
                                    const
                                    struct futhark_opaque_arr_dXdt_1d *in5,
                                    const
                                    struct futhark_opaque_arr_dXdt_1d *in6);
int futhark_entry_coordinatesFrom(struct futhark_context *ctx,
                                  struct futhark_f32_1d **out0,
                                  struct futhark_f32_1d **out1,
                                  struct futhark_f32_1d **out2,
                                  struct futhark_f32_1d **out3,
                                  struct futhark_f32_1d **out4,
                                  struct futhark_f32_1d **out5,
                                  struct futhark_f32_1d **out6,
                                  struct futhark_f32_1d **out7,
                                  struct futhark_f32_1d **out8,
                                  struct futhark_f32_1d **out9,
                                  struct futhark_f32_1d **out10,
                                  struct futhark_f32_1d **out11,
                                  struct futhark_f32_1d **out12, const
                                  struct futhark_opaque_arr_rigid_1d *in0);
int futhark_entry_toAssociations(struct futhark_context *ctx,
                                 struct futhark_opaque_arr_association_1d **out0,
                                 const struct futhark_i32_1d *in0, const
                                 struct futhark_i32_1d *in1, const
                                 struct futhark_i8_1d *in2, const
                                 struct futhark_i8_1d *in3, const
                                 struct futhark_i8_1d *in4);
int futhark_entry_toRigids(struct futhark_context *ctx,
                           struct futhark_opaque_arr_rigid_1d **out0, const
                           struct futhark_f32_1d *in0, const
                           struct futhark_f32_1d *in1, const
                           struct futhark_f32_1d *in2, const
                           struct futhark_f32_1d *in3, const
                           struct futhark_f32_1d *in4, const
                           struct futhark_f32_1d *in5, const
                           struct futhark_f32_1d *in6, const
                           struct futhark_f32_1d *in7, const
                           struct futhark_f32_1d *in8, const
                           struct futhark_f32_1d *in9, const
                           struct futhark_f32_1d *in10, const
                           struct futhark_f32_1d *in11, const
                           struct futhark_f32_1d *in12, const
                           struct futhark_f32_1d *in13, const
                           struct futhark_f32_1d *in14, const
                           struct futhark_f32_1d *in15, const
                           struct futhark_f32_1d *in16, const
                           struct futhark_i32_1d *in17);
int futhark_entry_addForceTorques(struct futhark_context *ctx,
                                  struct futhark_opaque_arr_forceTorque_1d **out0,
                                  const
                                  struct futhark_opaque_arr_forceTorque_1d *in0,
                                  const
                                  struct futhark_opaque_arr_forceTorque_1d *in1);
int futhark_entry_toForceTorques(struct futhark_context *ctx,
                                 struct futhark_opaque_arr_forceTorque_1d **out0,
                                 const struct futhark_f32_1d *in0, const
                                 struct futhark_f32_1d *in1, const
                                 struct futhark_f32_1d *in2, const
                                 struct futhark_f32_1d *in3, const
                                 struct futhark_f32_1d *in4, const
                                 struct futhark_f32_1d *in5);
int futhark_entry_box(struct futhark_context *ctx,
                      struct futhark_opaque_box **out0, const float in0, const
                      float in1, const float in2, const float in3, const
                      float in4, const float in5, const bool in6, const
                      bool in7, const bool in8);
/*
 * Miscellaneous
*/

void futhark_debugging_report(struct futhark_context *ctx);