test/Rigid/Raw.hs


foreign import ccall unsafe "futhark_entry_sgd"
  entry_sgd
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_f32_2d)
    -> Ptr (Ptr Futhark_f32_3d)
    -> Ptr (Ptr Futhark_f32_2d)
    -> Float
    -> Float
    -> Int32
    -> Int32
    -> Ptr Futhark_f32_2d
    -> Ptr Futhark_f32_3d
    -> Ptr Futhark_f32_2d
    -> Ptr Futhark_f32_2d
    -> Ptr Futhark_f32_2d
    -> Int32
    -> IO Int

foreign import ccall unsafe "futhark_entry_gradientDescent"
  entry_gradientDescent
    :: Ptr Futhark_context
    -> Ptr Float
    -> Ptr (Ptr Futhark_f32_2d)
    -> Ptr (Ptr Futhark_f32_3d)
    -> Ptr (Ptr Futhark_f32_2d)
    -> Float
    -> Ptr Futhark_f32_2d
    -> Ptr Futhark_f32_3d
    -> Ptr Futhark_f32_2d
    -> Ptr Futhark_f32_2d
    -> Ptr Futhark_f32_2d
    -> Int32
    -> IO Int

foreign import ccall unsafe "futhark_entry_dXdtsAndUpdatedSystem"
  entry_dXdtsAndUpdatedSystem
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_dXdt_1d)
    -> Ptr (Ptr Futhark_opaque_arr_rigid_1d)
    -> Float
    -> Ptr Futhark_opaque_box
    -> Ptr Futhark_opaque_arr_rigid_1d
    -> Ptr Futhark_opaque_arr_forceTorque_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_dXdts"
  entry_dXdts
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_dXdt_1d)
    -> Ptr Futhark_opaque_arr_rigid_1d
    -> Ptr Futhark_opaque_arr_forceTorque_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_rk4weightedUpdate"
  entry_rk4weightedUpdate
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_rigid_1d)
    -> Float
    -> Ptr Futhark_opaque_box
    -> Ptr Futhark_opaque_arr_rigid_1d
    -> Ptr Futhark_opaque_arr_dXdt_1d
    -> Ptr Futhark_opaque_arr_dXdt_1d
    -> Ptr Futhark_opaque_arr_dXdt_1d
    -> Ptr Futhark_opaque_arr_dXdt_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_coordinatesFrom"
  entry_coordinatesFrom
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr (Ptr Futhark_f32_1d)
    -> Ptr Futhark_opaque_arr_rigid_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_toAssociations"
  entry_toAssociations
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_association_1d)
    -> Ptr Futhark_i32_1d
    -> Ptr Futhark_i32_1d
    -> Ptr Futhark_i8_1d
    -> Ptr Futhark_i8_1d
    -> Ptr Futhark_i8_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_toRigids"
  entry_toRigids
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_rigid_1d)
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_i32_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_addForceTorques"
  entry_addForceTorques
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_forceTorque_1d)
    -> Ptr Futhark_opaque_arr_forceTorque_1d
    -> Ptr Futhark_opaque_arr_forceTorque_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_toForceTorques"
  entry_toForceTorques
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_arr_forceTorque_1d)
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> Ptr Futhark_f32_1d
    -> IO Int

foreign import ccall unsafe "futhark_entry_box"
  entry_box
    :: Ptr Futhark_context
    -> Ptr (Ptr Futhark_opaque_box)
    -> Float
    -> Float
    -> Float
    -> Float
    -> Float
    -> Float
    -> CBool
    -> CBool
    -> CBool
    -> IO Int

-- Miscellaneous
foreign import ccall unsafe "futhark_debugging_report"
  debugging_report
    :: Ptr Futhark_context
    -> IO ()
